--- a/common.blocks/card/__name/card__name.styl
+++ b/common.blocks/card/__name/card__name.styl
@@ -3,5 +3,7 @@
     opacity: 0.7;
     color: #021725;
     font-size: 1.3125rem;
-    line-height: 3.75rem;
+    line-height: 2rem;
+
+    margin: 1.25rem 0 2.25rem;
 }
