Сделать картинку в хедере, тянущейся по вьюпорту по высоте

--- a/common.blocks/header/header.styl
+++ b/common.blocks/header/header.styl
@@ -1,5 +1,11 @@
 .header
 {
-    background: url(header.jpg) no-repeat 50% top;
-    height: 699px;
+    background: url(header.jpg) no-repeat;
+    background-position: 50%;
+    background-size: cover;
+    height: 100vh;
+
+    @media (max-width: 768px) {
+        min-height: 699px;
+    }
 }
