Разместить заглавную надпись ровно в центре хедера

--- a/common.blocks/header/header.styl
+++ b/common.blocks/header/header.styl
@@ -1,5 +1,7 @@
 .header
 {
+    position: relative;
+
     background: url(header.jpg) no-repeat;
     background-position: 50%;
     background-size: cover;
