--- a/common.blocks/header/__text/header__text.styl
+++ b/common.blocks/header/__text/header__text.styl
@@ -1,10 +1,21 @@
 .header__text
 {
     color: white;
-    font-size: 5em;
-    line-height: 5.6em;
+
+    font-size: 5rem;
+    line-height: 5.6rem;
     font-weight: 300;
     text-align: center;
+
+    width: 100vw;
+
+    margin: 0;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 
     & > span
     {
