--- a/common.blocks/header/__text/header__text.styl
+++ b/common.blocks/header/__text/header__text.styl
@@ -7,14 +7,14 @@
     font-weight: 300;
     text-align: center;
 
-    width: 100vw;
+    width: 90vw;
 
     margin: 0;
 
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    right: 50%;
+    transform: translate(50%, -50%);
 
 
     & > span
