--- a/common.blocks/grid/grid.styl
+++ b/common.blocks/grid/grid.styl
@@ -1,7 +1,7 @@
 .grid
 {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
     max-width: 1280px;
     margin: 0 auto;
