Исправить лэйаут футера для мобильных

--- a/common.blocks/footer/__inner/footer__inner.styl
+++ b/common.blocks/footer/__inner/footer__inner.styl
@@ -8,4 +8,15 @@
     max-width: 768px;
 
     margin: 0 auto;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        align-items: flex-start;
+
+        height: auto;
+
+        > * {
+            padding: 1rem;
+        }
+    }
 }
