--- a/common.blocks/cards/cards.styl
+++ b/common.blocks/cards/cards.styl
@@ -2,4 +2,8 @@
 {
     display: flex;
     justify-content: space-between;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+    }
 }
