Задать 100% ширину и высоту картинки у карточки

--- a/common.blocks/card/__pic/card__pic.styl
+++ b/common.blocks/card/__pic/card__pic.styl
@@ -5,6 +5,10 @@
     width: inherit;
     height: 12rem;
 
+    @media (max-width: 768px) {
+        height: 100%;
+    }
+
     & .image
     {
         min-width: 100%;
