--- a/common.blocks/card/card.styl
+++ b/common.blocks/card/card.styl
@@ -1,2 +1,9 @@
-.card
+.card {
     width: 15.375rem;
+
+    @media (max-width: 768px) {
+        width: 100%;
+
+        margin-top: 1rem;
+    }
+}
